fix: use percentage instead of vh for mega menu vertical alignment
https://github.com/Codeinwp/neve/pull/184#discussion_r234140996

--- a/assets/scss/elements/_mega-menu.scss
+++ b/assets/scss/elements/_mega-menu.scss
@@ -95,7 +95,7 @@
     left: 50%;
     transform: translateX(-50%);
     padding: 20px;
-    top: 6vh;
+    top: 80%;
     overflow: hidden;
   }
   #nv-primary-navigation .neve-mega-menu > .sub-menu,
