--- a/style.css
+++ b/style.css
@@ -2270,7 +2270,7 @@ hr {
     left: 50%;
     transform: translateX(-50%);
     padding: 20px;
-    top: 6vh;
+    top: 80%;
     overflow: hidden;
   }
 
